SERVER-8144 Authenticating 2 users on a db should replace the 1st's privileges with the 2nd's.